Portfolio images added

--- a/index.html
+++ b/index.html
@@ -1,26 +1,217 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Lily Heaton Freelance Creative</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
-    
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Lily Heaton Freelance Creative</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+		integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+		integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+	</script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+		integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
+	</script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+		integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+	</script>
+	<script src="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+		integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+	</script>
+	<script src="https://kit.fontawesome.com/864598b6b3.js" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
+
 <body>
-<!-- Navigation-->
-<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top"   
-   <div class="container-fluid"><a class="navbar-brand" href="index.html"><img src="images/LH_P_Marrakech.jpg"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+	<!-- Navigation-->
+	<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+		<div class="container-fluid"><a class="navbar-brand" href="index.html">
+				<h5>LILY HEATON</h5>
+			</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
         <span class="navbar-toggler-icon"></span>
         </button>
-    </div>
-</nav>
+			<div class="collapse navbar-collapse" id="navbarResponsive">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item">
+						<a class="nav-link active" href="index.html">About</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Creative Services</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Portfolio</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Contact</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
 
+	<!--- Image Slider --->
+	<div id="slides" class="carousel slide" data-ride="carousel">
+		<ul class="carousel-indicators">
+			<li data-target="#slides" data-slide-to="0" class="active"></li>
+			<li data-target="#slides" data-slide-to="1"></li>
+			<li data-target="#slides" data-slide-to="2"></li>
+		</ul>
+		<div class="carousel-inner">
+			<div class="carousel-item active">
+				<img src="assets/images/LH_S_Ams6.jpg">
+            </div>
+			<div class="carousel-item">
+				<img src="assets/images/LH_S_Cycle1.jpg">
+            </div>			
+            <div class="carousel-item">
+				<img src="assets/images/LH_Corp6.jpg">
+            </div>
+		</div>
+	</div>
+    <br>
+<!--- welcome section-->
+	<div class="container-fluid padding">
+		<div class="row welcome text-center">
+			<div class="col-12">
+				<h4 class="display-4">Freelance Creative Services</h4>
+			</div>
+			<hr>
+			<div class="col-12">
+			<p class="lead">From Photography to Art Direction, we work with established and start-up lifestyle brands to develop creative solutions and engaging concepts.</p>
+			</div>
+		</div>
+	</div>
+    <hr class="my-4">
+<!--- Three column section-->
+	<div class="container-fluid padding">
+		<div class="row text-center padding">
+			<div class="col-xs-12 col-sm-6 col-md-4">
+				<i class="fas fa-route"></i>
+				<h3>Creative Direction</h3>
+				<p>Established brand or budding start-up, our philophy is the same - collaboration and clear
+					communication are our priorities from storyboards to finished product.</p>
+			</div>
+			<div class="col-xs-12 col-sm-6 col-md-4">
+                <i class="fas fa-camera-retro"></i>
+                <h3>Photography</h3>
+                <p>Professional photograph services, from studio to streetstyle shoots. We can make it
+                happen.</p>
+			</div>
+			<div class="col-sm-12 col-md-4">
+                <i class="fas fa-edit"></i>
+                <h3>Copywriting</h3>
+                <p>Native English, succinct, concise. We'll take your ideas and distill them in to something
+                special.</p>
+			</div>
+		</div>
+	</div>				
+    <hr class="my-4">
+<!--Two column section-->
+	<div class="container-fluid padding">
+    	<div class="row padding">
+			<div class="col-md-6 col-lg-6">
+			<h2>About</h2>
+			<p>Lily Heaton is an experienced creative director, photographer and content creator,
+			originally from Chicago now an Amsterdam local. </p>
+			<p>As a brand creative with 15 years experience in advertising and marketing, Lily
+			crafts captivating copy, imaginative ideas and sumptuous storytelling for brands to
+			authentically connect with their audience.</p>
+			<p>Available for project based or contracted creative services in the Netherlands and
+			beyond. </p>
+			<a href="contact.html" class="btn btn-primary">Get in touch</a>
+			</div>
+        </div>    
+        <br>
+		<div class="col-lg-6">
+		<img src="assets/images/LH_P_Marrakech.jpg" alt="Lily Heaton Portrait" class="img-fluid">
+        </div>
+	</div>
+    <hr c;ass="my-4">
+
+<!--- Fixed background-->
+<figure>
+    <div class="fixed-wrap">
+        <div id="fixed">
+        </div>
+    </div>
+</figure>
+
+<!--- Portfolio -->
+<div class="container-fluid padding">
+    <div class="row welcome text-center">
+        <div class="col-12">
+       <h4 class="display-4">Portfolio</h4>
+        </div>
+        <hr>
+    </div>
+</div>
+
+<!---Theme Cards -->
+<div class="container-fluid padding">
+<div class="row padding">
+    <div class="col-md-4">
+        <div class="card">
+            <img class="card-img-top" src="assets/images/LH_P_logo.jpg" alt="Portrait Portfolio">
+            <div class="card-body">
+                <h5 class="card-title">Portraits</h5>
+                <a href="#" class="btn btn-outline-secondary">View more</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-md-4">
+        <div class="card">
+            <img class="card-img-top" src="assets/images/LH_Corp1.jpg" alt="Corporate Portfolio">
+            <div class="card-body">
+                <h5 class="card-title">Corporate</h5>
+                <a href="#" class="btn btn-outline-secondary">View more</a>
+            </div>
+        </div>
+    </div>
+    
+    <div class="col-md-4">
+        <div class="card">
+            <img class="card-img-top" src="assets/images/LH_S_Ams1.jpg" alt="Architecture">
+            <div class="card-body">
+                <h5 class="card-title">Architecture</h5>
+                <a href="#" class="btn btn-outline-secondary">View more</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--- Connect --->
+<div class="container-fluid padding">
+<div class="row text-center padding">
+    <div class="col-12">
+    <h2>Connect</h2>
+    </div>
+    <div class="col-12 social padding">
+        <a href="https://www.linkedin.com/in/lilyheaton/"><i class="fab fa-linkedin"></i></a>
+        <a href="https://www.instagram.com/lilywanderlust/"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.facebook.com/lilymargaret"><i class="fab fa-facebook"></i></a>
+        <a href="https://www.lilywanderlust.com/"><i class="fas fa-blog"></i></a>
+    </div>
+</div>
+</div>
+ <hr class="light">
+<!--- Footer --->
+<footer>
+<div class="container-fluid padding">
+<div class="row text-center">
+    <div class="col-md-12">
+        <h4>Lily Heaton Creative Services
+        <hr class="light">
+        <p>phone number</p>
+        <p>email</p>
+        <p>address</p>
+    </div>
+</div>
+
+</div>
+</footer>
 </body>
+</html>
