CSS written and images added

--- a/index.html
+++ b/index.html
@@ -78,9 +78,10 @@
 			<div class="col-12">
 				<h4 class="display-4">Freelance Creative Services</h4>
 			</div>
-			<hr>
+			<hr class="hr">
 			<div class="col-12">
 			<p class="lead">From Photography to Art Direction, we work with established and start-up lifestyle brands to develop creative solutions and engaging concepts.</p>
+            <p class="lead">Take a peek in the Portfolio section to see some of our previous work.</p>
 			</div>
 		</div>
 	</div>
@@ -89,16 +90,16 @@
 	<div class="container-fluid padding">
 		<div class="row text-center padding">
 			<div class="col-xs-12 col-sm-6 col-md-4">
-				<i class="fas fa-route"></i>
-				<h3>Creative Direction</h3>
-				<p>Established brand or budding start-up, our philophy is the same - collaboration and clear
-					communication are our priorities from storyboards to finished product.</p>
-			</div>
-			<div class="col-xs-12 col-sm-6 col-md-4">
                 <i class="fas fa-camera-retro"></i>
                 <h3>Photography</h3>
                 <p>Professional photograph services, from studio to streetstyle shoots. We can make it
                 happen.</p>
+			</div>
+            <div class="col-xs-12 col-sm-6 col-md-4">
+				<i class="fas fa-route"></i>
+				<h3>Creative Direction</h3>
+				<p>Established brand or budding start-up, our philophy is the same - collaboration and clear
+					communication are our priorities from storyboards to finished product.</p>
 			</div>
 			<div class="col-sm-12 col-md-4">
                 <i class="fas fa-edit"></i>
@@ -109,85 +110,106 @@
 		</div>
 	</div>				
     <hr class="my-4">
-<!--Two column section-->
+<!--About-->
 	<div class="container-fluid padding">
-    	<div class="row padding">
-			<div class="col-md-6 col-lg-6">
-			<h2>About</h2>
-			<p>Lily Heaton is an experienced creative director, photographer and content creator,
-			originally from Chicago now an Amsterdam local. </p>
-			<p>As a brand creative with 15 years experience in advertising and marketing, Lily
-			crafts captivating copy, imaginative ideas and sumptuous storytelling for brands to
-			authentically connect with their audience.</p>
-			<p>Available for project based or contracted creative services in the Netherlands and
-			beyond. </p>
-			<a href="contact.html" class="btn btn-primary">Get in touch</a>
-			</div>
+		<div class="row welcome text-center">
+			<div class="col-12">
+				<h4 class="display-4">About</h4>
+                <hr>
+                <p>Lily Heaton is an experienced creative director, photographer and content creator,
+                originally from Chicago now an Amsterdam local. </p>
+                <p>As a brand creative with 15 years experience in advertising and marketing, Lily
+                crafts captivating copy, imaginative ideas and sumptuous storytelling for brands to
+                authentically connect with their audience.</p>
+                <p>Available for project based or contracted creative services across the Netherlands, the US and beyond. </p>
+                <br>
+                    <div class="text-center">
+                    <a href="contact.html" class="btn btn-primary btn-md text-center">Get in touch</a>
+                    </div>
+            </div>
         </div>    
         <br>
-		<div class="col-lg-6">
+		<div class="col-lg-6 text-center">
 		<img src="assets/images/LH_P_Marrakech.jpg" alt="Lily Heaton Portrait" class="img-fluid">
         </div>
-	</div>
-    <hr c;ass="my-4">
-
-<!--- Fixed background-->
-<figure>
-    <div class="fixed-wrap">
-        <div id="fixed">
-        </div>
+    <hr class="my-4">
     </div>
-</figure>
 
 <!--- Portfolio -->
-<div class="container-fluid padding">
-    <div class="row welcome text-center">
-        <div class="col-12">
-       <h4 class="display-4">Portfolio</h4>
+    <div class="container-fluid padding">
+        <div class="row welcome text-center">
+            <div class="col-12">
+        <h4 class="display-4">Portfolio</h4>
+            </div>
         </div>
-        <hr>
     </div>
-</div>
 
 <!---Theme Cards -->
 <div class="container-fluid padding">
-<div class="row padding">
-    <div class="col-md-4">
-        <div class="card">
-            <img class="card-img-top" src="assets/images/LH_P_logo.jpg" alt="Portrait Portfolio">
-            <div class="card-body">
-                <h5 class="card-title">Portraits</h5>
-                <a href="#" class="btn btn-outline-secondary">View more</a>
+    <div class="row padding">
+        <div class="col-md-4">
+            <div class="card">
+                <img class="card-img-top" src="assets/images/LH_P_logo.jpg" alt="Portrait Portfolio">
+                <div class="card-body">
+                    <h5 class="card-title">Portraits</h5>
+                    <a href="#" class="btn btn-outline-secondary">View more</a>
+                </div>
             </div>
         </div>
-    </div>
-
-    <div class="col-md-4">
-        <div class="card">
-            <img class="card-img-top" src="assets/images/LH_Corp1.jpg" alt="Corporate Portfolio">
-            <div class="card-body">
-                <h5 class="card-title">Corporate</h5>
-                <a href="#" class="btn btn-outline-secondary">View more</a>
+        <div class="col-md-4">
+            <div class="card">
+                <img class="card-img-top" src="assets/images/LH_Corp1.jpg" alt="Corporate Portfolio">
+                <div class="card-body">
+                    <h5 class="card-title">Corporate</h5>
+                    <a href="#" class="btn btn-outline-secondary">View more</a>
+                </div>
             </div>
         </div>
-    </div>
-    
-    <div class="col-md-4">
-        <div class="card">
-            <img class="card-img-top" src="assets/images/LH_S_Ams1.jpg" alt="Architecture">
-            <div class="card-body">
-                <h5 class="card-title">Architecture</h5>
-                <a href="#" class="btn btn-outline-secondary">View more</a>
+        <div class="col-md-4">
+            <div class="card">
+                <img class="card-img-top" src="assets/images/LH_S_Ams1.jpg" alt="Architecture">
+                <div class="card-body">
+                    <h5 class="card-title">Architecture</h5>
+                    <a href="#" class="btn btn-outline-secondary">View more</a>
+                </div>
             </div>
         </div>
-    </div>
+        <div class="col-md-4">
+            <div class="card">
+                <img class="card-img-top" src="assets/images/LH_P_logo.jpg" alt="Portrait Portfolio">
+                <div class="card-body">
+                    <h5 class="card-title">Portraits</h5>
+                    <a href="#" class="btn btn-outline-secondary">View more</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card">
+                <img class="card-img-top" src="assets/images/LH_Corp1.jpg" alt="Corporate Portfolio">
+                <div class="card-body">
+                    <h5 class="card-title">Corporate</h5>
+                    <a href="#" class="btn btn-outline-secondary">View more</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card">
+                <img class="card-img-top" src="assets/images/LH_S_Ams1.jpg" alt="Architecture">
+                <div class="card-body">
+                    <h5 class="card-title">Architecture</h5>
+                    <a href="#" class="btn btn-outline-secondary">View more</a>
+                </div>
+            </div>
+        </div>
+    </div> 
 </div>
-
+<hr class="my-4">
 <!--- Connect --->
 <div class="container-fluid padding">
-<div class="row text-center padding">
+<div class="row welcome text-center">
     <div class="col-12">
-    <h2>Connect</h2>
+    <h4 class="display-4">Connect</h4>
+    <hr class="hr">
     </div>
     <div class="col-12 social padding">
         <a href="https://www.linkedin.com/in/lilyheaton/"><i class="fab fa-linkedin"></i></a>
@@ -197,20 +219,19 @@
     </div>
 </div>
 </div>
- <hr class="light">
+<hr>
 <!--- Footer --->
 <footer>
 <div class="container-fluid padding">
-<div class="row text-center">
-    <div class="col-md-12">
-        <h4>Lily Heaton Creative Services
-        <hr class="light">
+<div class="row details text-center">
+    <div class="col-12">
+        <h4>Lily Heaton Creative Services</h4>
+        <hr class="hr">
         <p>phone number</p>
         <p>email</p>
         <p>address</p>
     </div>
 </div>
-
 </div>
 </footer>
 </body>
