portfolio front page

--- a/index.html
+++ b/index.html
@@ -110,6 +110,13 @@
 		</div>
 	</div>				
     <hr class="my-4">
+
+    <figure>
+        <div class="fixed-wrap">
+            <div id="fixed">
+            </div>
+        </div>
+    </figure>
 <!--About-->
 	<div class="container-fluid padding">
 		<div class="row welcome text-center">
@@ -130,7 +137,7 @@
         </div>    
         <br>
 		<div class="col-lg-6 text-center">
-		<img src="assets/images/LH_P_Marrakech.jpg" alt="Lily Heaton Portrait" class="img-fluid">
+		<img src="assets/images/LH_P_logo.jpg" alt="Lily Heaton Portrait" class="img-fluid">
         </div>
     <hr class="my-4">
     </div>
@@ -146,58 +153,58 @@
 
 <!---Theme Cards -->
 <div class="container-fluid padding">
-    <div class="row padding">
+    <div class="row padding text-center">
         <div class="col-md-4">
             <div class="card">
-                <img class="card-img-top" src="assets/images/LH_P_logo.jpg" alt="Portrait Portfolio">
+                <img class="card-img-top" src="assets/images/LH_P_YoungFathers.jpg" alt="Portrait Portfolio">
                 <div class="card-body">
                     <h5 class="card-title">Portraits</h5>
-                    <a href="#" class="btn btn-outline-secondary">View more</a>
+                    <a href="#" class="btn btn-outline-secondary">View Images</a>
                 </div>
             </div>
         </div>
         <div class="col-md-4">
             <div class="card">
-                <img class="card-img-top" src="assets/images/LH_Corp1.jpg" alt="Corporate Portfolio">
+                <img class="card-img-top" src="assets/images/LH_Corp9.jpg" alt="Corporate Portfolio">
                 <div class="card-body">
                     <h5 class="card-title">Corporate</h5>
-                    <a href="#" class="btn btn-outline-secondary">View more</a>
+                    <a href="#" class="btn btn-outline-secondary">View Images</a>
                 </div>
             </div>
         </div>
         <div class="col-md-4">
             <div class="card">
-                <img class="card-img-top" src="assets/images/LH_S_Ams1.jpg" alt="Architecture">
+                <img class="card-img-top" src="assets/images/LH_S_Ams1.jpg" alt="Cityscapes">
                 <div class="card-body">
-                    <h5 class="card-title">Architecture</h5>
-                    <a href="#" class="btn btn-outline-secondary">View more</a>
+                    <h5 class="card-title">Cityscapes</h5>
+                    <a href="#" class="btn btn-outline-secondary">View Images</a>
                 </div>
             </div>
         </div>
         <div class="col-md-4">
             <div class="card">
-                <img class="card-img-top" src="assets/images/LH_P_logo.jpg" alt="Portrait Portfolio">
+                <img class="card-img-top" src="assets/images/LH_S_Cycle2.jpg" alt="Street Portfolio">
                 <div class="card-body">
-                    <h5 class="card-title">Portraits</h5>
-                    <a href="#" class="btn btn-outline-secondary">View more</a>
+                    <h5 class="card-title">Streets</h5>
+                    <a href="#" class="btn btn-outline-secondary">View Images</a>
                 </div>
             </div>
         </div>
         <div class="col-md-4">
             <div class="card">
-                <img class="card-img-top" src="assets/images/LH_Corp1.jpg" alt="Corporate Portfolio">
+                <img class="card-img-top" src="assets/images/LH_T_Marrakech3.jpg" alt="Travel Portfolio">
                 <div class="card-body">
-                    <h5 class="card-title">Corporate</h5>
-                    <a href="#" class="btn btn-outline-secondary">View more</a>
+                    <h5 class="card-title">Travel</h5>
+                    <a href="#" class="btn btn-outline-secondary">View Images</a>
                 </div>
             </div>
         </div>
         <div class="col-md-4">
             <div class="card">
-                <img class="card-img-top" src="assets/images/LH_S_Ams1.jpg" alt="Architecture">
+                <img class="card-img-top" src="assets/images/LH_Events1.jpg" alt="Events Portfolio">
                 <div class="card-body">
-                    <h5 class="card-title">Architecture</h5>
-                    <a href="#" class="btn btn-outline-secondary">View more</a>
+                    <h5 class="card-title">Events</h5>
+                    <a href="#" class="btn btn-outline-secondary">View Images</a>
                 </div>
             </div>
         </div>
@@ -224,12 +231,12 @@
 <footer>
 <div class="container-fluid padding">
 <div class="row details text-center">
-    <div class="col-12">
+    <div class="col-lg-12">
         <h4>Lily Heaton Creative Services</h4>
-        <hr class="hr">
-        <p>phone number</p>
-        <p>email</p>
-        <p>address</p>
+        <hr class="hr light-100">
+        <p class="a">06 29 777 636</p>
+        <p>hello {at} lilyheatoncreative {dot} com</p>
+        <p>www.lilyheatoncreative.com</p>
     </div>
 </div>
 </div>
