Form added to Contact Us

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
         </button>
 			<div class="collapse navbar-collapse" id="navbarResponsive">
 				<ul class="navbar-nav ml-auto">
-					<li class="nav-item">
-						<a class="nav-link active" href="index.html">About</a>
-					</li>
-					<li class="nav-item">
+					<li class="nav-item active">
 						<a class="nav-link" href="#">Creative Services</a>
+					</li>
+                    <li class="nav-item">
+						<a class="nav-link" href="index.html">About</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">Portfolio</a>
@@ -139,6 +139,7 @@
 		<div class="col-lg-6 text-center">
 		<img src="assets/images/LH_P_logo.jpg" alt="Lily Heaton Portrait" class="img-fluid">
         </div>
+        <br>
     <hr class="my-4">
     </div>
 
@@ -148,6 +149,7 @@
             <div class="col-12">
         <h4 class="display-4">Portfolio</h4>
             </div>
+			<hr class="hr">
         </div>
     </div>
 
@@ -183,7 +185,7 @@
         </div>
         <div class="col-md-4">
             <div class="card">
-                <img class="card-img-top" src="assets/images/LH_S_Cycle2.jpg" alt="Street Portfolio">
+                <img class="card-img-top" src="assets/images/LH_P_Marrakech.jpg" alt="Street Portfolio">
                 <div class="card-body">
                     <h5 class="card-title">Streets</h5>
                     <a href="#" class="btn btn-outline-secondary">View Images</a>
@@ -192,7 +194,7 @@
         </div>
         <div class="col-md-4">
             <div class="card">
-                <img class="card-img-top" src="assets/images/LH_T_Marrakech3.jpg" alt="Travel Portfolio">
+                <img class="card-img-top" src="assets/images/LH_T_Marrakech1.jpg" alt="Travel Portfolio">
                 <div class="card-body">
                     <h5 class="card-title">Travel</h5>
                     <a href="#" class="btn btn-outline-secondary">View Images</a>
@@ -211,13 +213,28 @@
     </div> 
 </div>
 <hr class="my-4">
-<!--- Connect --->
+<!--- Contact --->
 <div class="container-fluid padding">
 <div class="row welcome text-center">
     <div class="col-12">
-    <h4 class="display-4">Connect</h4>
+    <h4 class="display-4">Contact Us</h4>
     <hr class="hr">
     </div>
+    <div class="row welcome text-center">
+    <p>Need us? We'd love to help. Fill in the form below and we'll be in touch soon!</p>
+    <div class="container">
+    <form action="action_page.php">
+    <label for="fname">First Name</label>
+    <input type="text" id="fname" name="firstname" placeholder="Your name..">
+    <label for="lname">Last Name</label>
+    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+    <br>
+    <label for="subject">Subject</label>
+    <textarea id="subject" name="subject" placeholder="How can we help?" style="height:200px"></textarea>
+    <input type="submit" value="Submit">
+  </form>
+  </div>
+</div>
     <div class="col-12 social padding">
         <a href="https://www.linkedin.com/in/lilyheaton/"><i class="fab fa-linkedin"></i></a>
         <a href="https://www.instagram.com/lilywanderlust/"><i class="fab fa-instagram"></i></a>
